--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules
 coverage
 dist
 .DS_Store
-.sublime-gulp.cache
-.sublime-project
-.sublime-workspace
+*.sublime-gulp.cache
+*.sublime-project
+*.sublime-workspace
