support variables for mock define files

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,10 @@
-tests
-node_modules
-coverage
-tests
-dist
-build
-gulpfile.js
-deimos.coffee
-example.js
-*.sublime-gulp.cache
-*.sublime-project
-*.sublime-workspace
+/tests
+/node_modules
+/coverage
+/build
+/lib
+/dist/tests
+/gulpfile.js
+/deimos.coffee
+/example.js
+*.sublime*
