--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mars-phobos",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "mock server for mars",
   "main": "index.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "prepublish": "gulp publish",
+    "postpublish": "gulp clean"
   },
   "repository": {
     "type": "git",
@@ -22,12 +24,12 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.1",
-    "coffee-script": "^1.10.0",
-    "connect": "^3.4.1",
     "lodash": "^4.4.0",
-    "mars-deimos": "^0.1.5"
+    "mars-deimos": "^0.1.9"
   },
   "devDependencies": {
+    "connect": "^3.4.1",
+    "coffee-script": "^1.10.0",
     "mocha": "^2.4.5",
     "istanbul": "^0.4.1",
     "chai": "^3.5.0",
