--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mars-phobos",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "mock server for mars",
   "main": "index.js",
   "directories": {
@@ -25,7 +25,8 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "lodash": "^4.4.0",
-    "mars-deimos": "^0.1.9"
+    "mars-deimos": "^0.1.9",
+    "nodejs-fs-utils": "^1.0.26"
   },
   "devDependencies": {
     "connect": "^3.4.1",
@@ -43,7 +44,6 @@
     "mocha-notifier-reporter": "^0.1.1",
     "gulp-istanbul": "^0.10.3",
     "madge": "^0.5.3",
-    "glob-stream": "^5.3.1",
-    "nodejs-fs-utils": "^1.0.26"
+    "glob-stream": "^5.3.1"
   }
 }
